    + [BR] Apply patch from Jonas Genannt to render obsolete ruby 1.8.

  * data/files/obsolete-paths:
    + [BR] Add /etc/X11/fonts/X11R7 as obsolete path (Closes: #646872).

  * data/files/privacy-breaker-{fragments,websites}
    + [BR] Add w3c website valid x?html icons.
    + [BR] Add piwik detection.
    + [BR] Add detection of well known statistics websites.
    + [BR] Detect facebook.

  * data/rules/rules-should-not-use:
    + [BR] Detect use of $(_) variable in debian/rules (Closes: #585495).

  * data/scripts/maintainer-script-bad-command:
    + [BR] Service is reserved to system admin (Closes: #656229).

  * debian/control:
    + [NT] Add relevant relations on libyaml-perl, which is
      now used by harness.

  * reporting/harness:
    + [NT] Fix typo in --schedule-chunk-size command-line argument.
    + [NT] Require a new configuration variable $HARNESS_STATE_DIR.
      This variable tells harness where it can store state
      information and caches.
    + [NT] Track which version of lintian a given package group
      was processed by.  Using this information, harness will now
      slowly reprocess groups processed by an other version of
      Lintian than the current.

  * t:
    + [NT] Apply patch from Adam Conrad to fix issue with a test
      when run in an Ubuntu environment.  Also thanks to Benjamin
      Drung for forwarding the patch to the Debian BTS.
      (Closes: #725139)

 -- Niels Thykier <niels@thykier.net>  Sat, 21 Dec 2013 10:44:43 +0100

lintian (2.5.20) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - build-depends-on-an-obsolete-java-package
      - debian-watch-file-pubkey-file-is-missing
      - debian-watch-may-check-gpg-signature
      - license-problem-nvidia-intellectual
      - maintainer-script-should-not-hide-init-failure
      - maintainer-script-should-not-modify-ld-so-conf
      - maintainer-script-should-not-modify-netbase-managed-file