@@ -7,6 +7,7 @@
 #
 # Please keep this sorted by tag.
 privacy-breach-google-adsense	  ~~^(?:[^\./]+\.)?(?:googlesyndication\.com/pagead/show_ads\.js|google-analytics\.com/(?:ga|urchin)\.js)
+privacy-breach-google-cse         ~~^(?:[^\./]+\.)?google\.com/(:?afsonline/show_afs_search\.js|cse/api/branding\.css)$
 privacy-breach-facebook           ~~^(?:[^\./]+\.)?facebook.com/
 privacy-breach-piwik              ~~/piwik\.php\?
 privacy-breach-w3c-valid-html     ~~^(?:(?:[^\./]+\.)?w3.org/(?:Icons/valid-|css-validator/images/)(?:[^/]+)?$|validator.w3.org/)
