@@ -62,6 +62,7 @@ lintian (2.5.21) UNRELEASED; urgency=medium
     + [BR] Add piwik detection.
     + [BR] Add detection of well known statistics websites.
     + [BR] Detect facebook.
+    + [BR] Detect google custom search engine.
 
   * data/rules/rules-should-not-use:
     + [BR] Detect use of $(_) variable in debian/rules (Closes: #585495).
